--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,15 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import Home from '../components/home/hero.astro';
+import { getActricesDestacadas } from '../lib/wp';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const actricesDestacadas = await getActricesDestacadas();
 ---
 
-<Layout>
-	<Welcome />
+<Layout 
+  title="Actrices | Inicio" 
+  description="Descubre las actrices más talentosas del cine y la televisión" 
+  keywords="actrices, cine, televisión, películas, series"
+>
+  <Home actricesDestacadas={actricesDestacadas} />
 </Layout>
