Descripción del cambio

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,6 +41,7 @@ const { title, description, keywords } = Astro.props;
             <slot />
         </div>
         <Footer />
+        <slot name="scripts" />
     </body>
 </html>
 
